--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -12,6 +12,10 @@
    src: local('pixelscreenfontlight'), url('../../public/assets/font/pixelscreenfontlight.ttf') format('truetype');
 }
 
+.home-title {
+   margin-top: 11vh;
+}
+
 .home-serve-title {
    position: absolute;
    display: flex;
@@ -22,7 +26,7 @@
 .home-serve-title span {
    display: inline-block;
    width: fit-content;
-   height: 3.2vw;
+   height: 3.4vw;
    font-family: 'Pixel Screen Font';
    font-size: 4vw;
    background-color: #FF4B97;
@@ -36,10 +40,8 @@
 }
 
 .home-serve-title span span.active {
-   transform: translateY(-10px);
+   transform: translateY(-20px);
    /* 튀어오름 */
-   opacity: 1;
-   /* 완전한 불투명도 */
 }
 
 
@@ -65,6 +67,12 @@ h1 {
    display: flex;
    flex-direction: column;
    letter-spacing: 0.2vw;
+
+}
+
+h1 span {
+   margin-bottom: 1.5vw;
+
 }
 
 h1>span:nth-child(2) {
