--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -3,7 +3,7 @@
 }
 
 .section-title {
-   margin-bottom: 5vw;
+   margin-bottom: 3vw;
 }
 
 .section-title h2 {
@@ -52,7 +52,8 @@ td {
 
 .skill-ex {
    font-size: 0.8vw;
-   padding: 2vw 3vw;
+   padding-top: 2vw;
+   padding-left: 2vw;
    line-height: 150%;
    text-align: left;
 }
@@ -60,7 +61,8 @@ td {
 
 /* 프로그래스 */
 .progress-td {
-   padding-left: 5vw;
+   padding-left: 12vw;
+   padding-right: 3vw;
    padding-top: 2vw;
    text-align: center;
 }
@@ -68,7 +70,7 @@ td {
 .progress-bar {
    position: relative;
    width: 12vw;
-   height: 20px;
+   height: 13px;
    background-color: #ddd;
    overflow: hidden;
 }
