--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -12,7 +12,7 @@
 
 .project-content {
    height: 50vw;
-   background-image: url('../../public/assets/img/bgi.png');
+   background-image: url('/assets/img/bgi.png');
    background-repeat: no-repeat;
    background-size: cover;
 }
