--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -19,5 +19,28 @@
 }
 
 .project-image {
+   cursor: pointer;
    width: 10vw;
+}
+
+/* 팝업 */
+.popup-overlay {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background: rgba(0, 0, 0, 0.6);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 9999;
+}
+
+.popup-content {
+   background-color: #fff;
+}
+
+.popup-image {
+   width: 30vw;
 }
