--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -11,7 +11,7 @@
 }
 
 .project-content {
-   height: 50vw;
+   position: relative;
    background-image: url('/assets/img/bgi.png');
    background-repeat: no-repeat;
    background-size: 100vw;
@@ -22,6 +22,7 @@
    scrollbar-width: none;
 
    align-items: flex-end;
+   border-bottom: 1.75px solid #555;
 
 }
 
@@ -31,25 +32,30 @@
 }
 
 .project-card {
-   margin-right: 5vw;
+   height: 100%;
+   margin-right: 7vw;
+   border-right: 1.75px solid #555;
 }
 
 .project-content p {
-   align-items: flex-start;
+   margin-top: 1vw;
+   position: absolute;
+   top: 0;
    font-size: 0.85vw;
 }
 
 .project-content h2 {
+   margin-top: 10vw;
    margin-bottom: 1vw;
-   font-size: 1.3vw;
+   font-size: 1vw;
    font-weight: 700;
 }
 
 
 .project-image {
    cursor: pointer;
-   width: 30vw;
-   margin-bottom: 15vw;
+   width: 33vw;
+   margin-bottom: 1vw;
 }
 
 /* 팝업 */
