--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -61,12 +61,16 @@
    margin-bottom: -30vw;
 }
 
+.project-wrapper {
+   display: flex;
+   align-items: center;
+   position: relative;
+}
+
 .scroll-button {
    position: absolute;
-   top: 240%;
+   top: 105%;
    transform: translateY(-50%);
-   background-color: #555;
-   color: #fff;
    border: none;
    border-radius: 50%;
    width: 40px;
@@ -77,7 +81,7 @@
    align-items: center;
    cursor: pointer;
    z-index: 10;
-   opacity: 0.7;
+   background: transparent;
 }
 
 .scroll-button:hover {
