프로젝트 팝업 스타일링

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,6 +13,16 @@ body {
       'Noto Sans KR',
       'Malgun Gothic',
       sans-serif;
+
+}
+
+.main {
+   -ms-overflow-style: none;
+   scrollbar-width: none;
+}
+
+.main::-webkit-scrollbar {
+   display: none;
 }
 
 @media (max-width: 750px) {
