--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -6,18 +6,34 @@
    margin-right: 3vw;
 }
 
-.main-profile img {
-   width: 40vw;
-   height: fit-content;
-   margin-right: 5vw;
-   margin-top: 2.5vw;
+
+.download-button {
+   cursor: pointer;
+   position: absolute;
+   padding: 10px 20px;
+   border-radius: 30px;
+   border: 1.75px solid #000;
+   background: transparent;
+   font-size: 1vw;
+   margin-left: 40vw;
+   margin-top: -1vw;
+}
+
+.download-button:hover {
+   border: 1.75px solid #FF4B97;
+   background: #FF4B97;
+
+}
+
+.download-button img {
+   width: 1vw;
 }
 
 .main-profile h2 {
+   margin-bottom: 3vw;
+   border-bottom: 1.75px solid #000;
    font-size: 2vw;
    font-weight: 500;
-   border-bottom: 1.75px solid #000;
-   margin-bottom: 3vw;
    padding-bottom: 0.5vw;
 }
 
@@ -73,4 +89,11 @@
 .profile-img {
    position: relative;
    display: flex;
+}
+
+.profile-img img {
+   width: 40vw;
+   height: fit-content;
+   margin-right: 5vw;
+   margin-top: 2.5vw;
 }
