--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,14 +1,42 @@
 .contact-container {
    margin-top: 25vh;
+   text-align: center;
 }
 
 .contact-container h2 {
    padding-left: 3vw;
-   margin-bottom: 3vw;
-   border-bottom: 1.75px solid #000;
+   margin-bottom: 2vw;
    font-size: 2vw;
    font-weight: 500;
    padding-bottom: 0.5vw;
+
+}
+
+.email-form {
+   margin: 0 30vw;
+   display: flex;
+   flex-direction: column;
+   margin-bottom: 3vw;
+}
+
+.user-info {
+   display: flex;
+   margin-bottom: 1vw;
+}
+
+.user-info input {
+   margin-right: 1vw;
+   padding: 0.7vw;
+   border: 1.75px solid #000;
+}
+
+.email-form textarea {
+   padding: 1vw;
+   border: 1.75px solid #000;
+}
+
+.email-form button {
+   margin-top: 1vw;
 }
 
 .contact-list img {
