--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,44 +1,87 @@
 .contact-container {
    margin-top: 25vh;
-   text-align: center;
+   margin-bottom: 25vh;
+   margin-right: 30vw;
+   margin-left: 30vw;
+   padding: 5vw;
+   border: 1.75px solid #000;
+   border-radius: 15px;
+
 }
 
 .contact-container h2 {
-   padding-left: 3vw;
+   text-align: center;
    margin-bottom: 2vw;
-   font-size: 2vw;
-   font-weight: 500;
-   padding-bottom: 0.5vw;
+
+   display: inline-block;
+   width: fit-content;
+   height: 2.5vw;
+   font-family: 'Pixel Screen Font';
+   font-size: 3vw;
+   background-color: #FF4B97;
+   text-shadow: -9px 0px #FF4B97, 0px 9px #FF4B97, 9px 0px #FF4B97, 0px -9px #FF4B97;
 
 }
 
-.email-form {
-   margin: 0 30vw;
+.form-group {
    display: flex;
    flex-direction: column;
-   margin-bottom: 3vw;
 }
 
 .user-info {
    display: flex;
-   margin-bottom: 1vw;
+}
+
+.form-group label {
+   margin-bottom: 0.5vw;
+   font-weight: 500;
+   font-size: 0.85vw;
 }
 
 .user-info input {
-   margin-right: 1vw;
-   padding: 0.7vw;
-   border: 1.75px solid #000;
+   border: 1.75px solid #555;
+   padding: 0.3vw 0.7vw;
+   border-radius: 5px;
+   margin-right: 0.6vw;
 }
 
-.email-form textarea {
-   padding: 1vw;
-   border: 1.75px solid #000;
+.form-group textarea {
+   border: 1.75px solid #555;
+   padding: 0.3vw 0.7vw;
+   border-radius: 5px;
+   height: 5vw;
 }
 
-.email-form button {
+.contact-container button {
+   margin-top: 1vw;
+   cursor: pointer;
+   padding: 10px 20px;
+   border-radius: 30px;
+   border: 1.75px solid #000;
+   background: transparent;
+   font-size: 0.85vw;
+}
+
+.contact-container button:hover {
+   border: 1.75px solid #FF4B97;
+   background: #FF4B97;
+}
+
+.message-form {
    margin-top: 1vw;
 }
 
+.contact-list {
+   margin-top: 2vw;
+}
+
 .contact-list img {
-   width: 3vw;
+   width: 2vw;
+   margin-right: 0.5vw;
+}
+
+.success-message {
+   margin-top: 1vw;
+   font-weight: 700;
+   font-size: 0.75vw;
 }
