--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -79,8 +79,8 @@
 
    cursor: pointer;
    width: 33vw;
-   margin-top: -20vw;
-   margin-bottom: -30vw;
+   /* margin-top: -80vw; */
+   margin-bottom: -27vw;
 }
 
 .project-wrapper {
@@ -202,11 +202,11 @@
 }
 
 .popup-url {
-   margin-bottom: 0.5vw;
+   margin-top: 1vw;
    display: flex;
 }
 
 .popup-icon {
-   width: 1.5vw;
+   width: 2vw;
    margin-right: 0.2vw;
 }
