--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -40,12 +40,13 @@ td {
 }
 
 .skill-img {
-   width: 6.5vw;
-   height: 6.5vw;
+   width: 6vw;
+   height: 6vw;
    object-fit: contain;
 }
 
 .skill-img-td {
+   padding: 0.3vw;
    border: 1.75px solid #000;
 }
 
